<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/custom_toast_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        tools:context=".view.MainActivity"
        >

        <TextView
            android:id="@+id/title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/avaliador_online"
            android:textSize="40sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/sub_title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="Ajuda"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/title_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Título"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
                android:id="@+id/body_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="menu selecionado"
                android:textSize="25sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/know_more"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/help_sobre_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:clickable="true"
            android:text="@string/help_sobre_title"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/help_Desenvolvimento_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:clickable="true"
            android:layout_marginLeft="10dp"
            android:text="@string/help_Desenvolvimento_title"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/help_Objetivo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:clickable="true"
            android:layout_marginLeft="10dp"
            android:text="@string/help_Objetivo_title"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/help_Funcionamento_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:clickable="true"
            android:layout_marginLeft="10dp"
            android:text="@string/help_Funcionamento_title"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/help_area_privativa_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:clickable="true"
            android:text="@string/help_area_privativa_title"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/help_padroes_de_acabamento_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:clickable="true"
            android:text="@string/help_padroes_de_acabamento_title"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/help_padroes_de_acabamento_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:clickable="true"
            android:layout_marginLeft="10dp"
            android:text="@string/help_padroes_de_acabamento_1"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/help_padroes_de_acabamento_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:clickable="true"
            android:layout_marginLeft="10dp"
            android:text="@string/help_padroes_de_acabamento_2"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/help_padroes_de_acabamento_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:clickable="true"
            android:layout_marginLeft="10dp"
            android:text="@string/help_padroes_de_acabamento_3"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/help_padroes_de_acabamento_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:clickable="true"
            android:layout_marginLeft="10dp"
            android:text="@string/help_padroes_de_acabamento_4"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/help_padroes_de_acabamento_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:clickable="true"
            android:layout_marginLeft="10dp"
            android:text="@string/help_padroes_de_acabamento_5"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/help_estado_de_conservacao_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:clickable="true"
            android:text="@string/help_estado_de_conservação_title"
            android:textSize="25sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/help_estado_de_conservacao_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:clickable="true"
            android:layout_marginLeft="10dp"
            android:text="@string/help_estado_de_conservação_1"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/help_estado_de_conservacao_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:clickable="true"
            android:layout_marginLeft="10dp"
            android:text="@string/help_estado_de_conservação_2"
            android:textSize="25sp"/>
        <TextView
            android:id="@+id/help_estado_de_conservacao_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:clickable="true"
            android:layout_marginLeft="10dp"
            android:text="@string/help_estado_de_conservação_3"
            android:textSize="25sp"/>
        <TextView
        android:id="@+id/help_estado_de_conservacao_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:onClick="onClick"
            android:clickable="true"
        android:layout_marginLeft="10dp"
        android:text="@string/help_estado_de_conservação_4"
        android:textSize="25sp"/>
        <TextView
            android:id="@+id/help_estado_de_conservacao_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:clickable="true"
            android:layout_marginLeft="10dp"
            android:text="@string/help_estado_de_conservação_5"
            android:textSize="25sp"/>
    </TableLayout>

</ScrollView>